SF Primes/src/objects/Key_Rep_Changes__c.object
<CustomObject>
    <description>DS SalesOps objects to change ownership of accounts</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Rep Changes</relationshipLabel>
        <relationshipName>Key_Rep_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Reason__c</fullName>
        <label>Change Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Client Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - DOS Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Territory Realignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Year End Mistake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - New Point/Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Key_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Key Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6)</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Forecasting_Channel__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>User.Non_Interactive_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <value>00540000000zry6AAA</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <value>00540000000zT4eAAE</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>equals</operation>
                <value>005400000022z7vAAA</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Key_Rep_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Key_DOS__c</fullName>
        <label>Previous Key DOS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Key_Rep__c</fullName>
        <label>Previous Key Rep</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Key Rep Changes</label>
    <listViews>
        <fullName>Key_Rep_Changes</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>New_Key_Rep__c</columns>
        <columns>Change_Reason__c</columns>
        <columns>Previous_Key_Rep__c</columns>
        <columns>Previous_Key_DOS__c</columns>
        <columns>Region__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Key Rep Changes</label>
        <language>en_US</language>
        <sharedTo>
            <group>DealerSalesOps</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>KRC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Rep Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>